Prevent graph resize due to tooltip overflow

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -236,6 +236,9 @@ img
   overflow-y: hidden
   color: #000000
 
+.recharts-wrapper
+  overflow: hidden
+
 .recharts-bar-rectangle
   cursor: pointer
 
